--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>discord.gg/uaee</title>
+    <title>discord.gg/j7yNPpdbGY</title>
     <style>
         body {
             margin: 0;
@@ -60,7 +60,7 @@
         <span><strong>Organization:</strong> <span id="org"></span></span><br>
         <span><strong>Timezone:</strong> <span id="timezone"></span></span>
     </div>
-    <div class="text">discord.gg/uaee</div>
+    <div class="text">discord.gg/j7yNPpdbGY</div>
 
     <script>
          fetch('https://ipinfo.io/json')
