--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 </head>
 <body>
     <div class="image-container">
-        <img src="https://l.top4top.io/p_32131zd9t1.png" alt="Discord Image">
+        <img src="https://f.top4top.io/p_3500om9dw1.png" alt="Discord Image">
     </div>
     <audio autoplay loop>
-        <source src="حط الاغنيه الي تبيها" type="audio/mpeg">
+        <source src="https://youtu.be/v5ysvcrxolM?list=RDv5ysvcrxolM" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
     <div class="info" id="ip-info">
