--- a/index.html
+++ b/index.html
@@ -48,17 +48,10 @@
         <img src="https://f.top4top.io/p_3500om9dw1.png" alt="Discord Image">
     </div>
     <audio autoplay loop>
-        <source src="https://youtu.be/v5ysvcrxolM?list=RDv5ysvcrxolM" type="audio/mpeg">
+        <source src="https://a.top4top.io/m_35009fxzi1.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
-    <div class="info" id="ip-info">
-        <strong>IP: <span id="ip"></span></strong><br>
-        <span><strong>City:</strong> <span id="city"></span></span><br>
-        <span><strong>Region:</strong> <span id="region"></span></span><br>
-        <span><strong>Country:</strong> <span id="country"></span></span><br>
-        <span><strong>Location:</strong> <span id="loc"></span></span><br>
-        <span><strong>Organization:</strong> <span id="org"></span></span><br>
-        <span><strong>Timezone:</strong> <span id="timezone"></span></span>
+  <span><strong>b7t store:HI      :me.name: battal</strong> <span id="timezone"></span></span>
     </div>
     <div class="text">discord.gg/j7yNPpdbGY</div>
 
