--- a/index.html
+++ b/index.html
@@ -1,68 +1,61 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar" dir="rtl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>discord.gg/j7yNPpdbGY</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            background: url('https://i.pinimg.com/originals/51/ae/a3/51aea3393b8234a1e69d8713a0a58bc3.gif') no-repeat center center fixed;
-            background-size: cover;
-            font-family: 'Courier New', Courier, monospace;
-            color: #0000ff;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            flex-direction: column;
-            text-align: center;
-        }
-        .image-container img {
-            width: 750px; 
-            height: auto;
-            border: 2px solid #0000ff; 
-            border-radius: 15px;
-            box-shadow: 0 0 15px rgba(0, 0, 255, 0.7); 
-        }
-        .info {
-            margin-top: 20px;
-            font-size: 1.5em;
-            color: #0000ff; 
-            text-shadow: 0px 0px 8px #0000ff, 0px 0px 15px #0000ff, 0px 0px 25px #0000ff; 
-            letter-spacing: 4.5px; 
-            white-space: pre-wrap;
-        }
-        .text {
-            margin-top: 20px;
-            font-size: 3em; 
-            color: #0000ff; 
-            text-shadow: 0px 0px 8px #0000ff, 0px 0px 15px #0000ff, 0px 0px 25px #0000ff; 
-            letter-spacing: 4.5px; 
-        }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>discord.gg/j7yNPpdbGY</title>
+<style>
+    body {
+        margin: 0;
+        padding: 0;
+        font-family: 'Courier New', Courier, monospace;
+        color: #0000ff;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        background: url('https://wallpapercave.com/wp/wp3284888.jpg') no-repeat center center fixed;
+        background-size: cover;
+        text-align: center;
+    }
+
+    .top-link {
+        position: absolute;
+        top: 15px;
+        font-size: 18px;
+        background: rgba(0,0,0,0.5);
+        padding: 8px 15px;
+        border-radius: 8px;
+        text-decoration: none;
+        color: #00f;
+        text-shadow: 0 0 5px #00f;
+    }
+
+    .info {
+        font-size: 14px;
+        text-shadow: 0px 0px 8px #0000ff, 0px 0px 15px #0000ff;
+        letter-spacing: 2px;
+        margin-top: 10px;
+        background: rgba(255,255,255,0.3);
+        padding: 5px 10px;
+        border-radius: 5px;
+    }
+</style>
 </head>
 <body>
-    <div class="image-container">
-        <img src="https://f.top4top.io/p_3500om9dw1.png" alt="Discord Image">
-    </div>
-    <audio autoplay loop>
-        <source src="https://a.top4top.io/m_35009fxzi1.mp3" type="audio/mpeg">
-        Your browser does not support the audio element.
-    </audio>
-  <span><strong>b7t store:HI      :me.name: battal</strong> <span id="timezone"></span></span>
-    </div>
-    <div class="text">discord.gg/j7yNPpdbGY</div>
 
-    <script>
-         fetch('https://ipinfo.io/json')
-        .then(response => response.json())
-        .then(data => {
-            delete data.readme;
-            const infoDiv = document.getElementById('ip-info');
-            infoDiv.textContent = JSON.stringify(data, null, 2);
-        });
-    </script>
+<a class="top-link" href="https://discord.gg/j7yNPpdbGY" target="_blank">https://discord.gg/j7yNPpdbGY</a>
+
+<div class="info">
+    b7t store: HI | :me.name: battal
+</div>
+
+<audio autoplay loop hidden>
+    <source src="https://a.top4top.io/m_35009fxzi1.mp3" type="audio/mpeg">
+    متصفحك لا يدعم الصوت
+</audio>
+
+
 </body>
 </html>
